Version 2.4
fix flags for real this time, using flags from this source: https://www.reddit.com/r/admincraft/comments/npib9k/java_16_minecraft_server_117/